--- a/index.html
+++ b/index.html
@@ -125,127 +125,7 @@
     </div>
 </body>
 <script>
-    var rawQuiz = ['Khi nào thì cưới?',
-        'Ba mẹ bạn có biết bạn 3d không?',
-        'Mẫu người phụ nữ lý tưởng của bạn?',
-        'Mẫu người đàn ông lý tưởng của bạn?',
-        'Anh Tuấn Trương có đẹp trai không?',
-        'Ai hát hay nhất FS?',
-        'Ai chơi đá banh hay nhất FS?',
-        'Ai ngầu nhất FS?',
-        'Ai giàu (tình cảm) nhất FS?',
-        'Ai vui tính nhất FS?',
-        'Bạn muốn người hát hay nhất FS hát bài gì?',
-        'Bạn muốn người hát dở nhất FS hát bài gì?',
-        'Bạn muốn nghe người đá banh hay nhất chúc Tết?',
-        'Và anh là ai thế em, em à, em ơi?',
-        'Mồ côi tình yêu như thế sao ko đi tìm?',
-        '3 điều bạn mong sếp của mình sẽ cải thiện',
-        'Kể tên 3 điểm mà app thanh toán khác làm tốt hơn MoMo',
-        'người bạn sẽ hẹn hò trong team',
-        'Bạn mong muốn mức lương hiện tại tăng/ giảm bao nhiêu phần trăm',
-        'yêu cầu đọc được hết tên những người tham gia buổi tiệc hôm nay',
-        'Bạn có ổn không?',
-        'Nếu không làm product thì bạn làm gì?',
-        'Có điều gì năm vừa rồi bạn không hoàn thành không?',
-        'Có điều gì năm vừa rồi bạn đã hoàn thành được?',
-        'Bạn thích bản thân mình nhất là trong hoàn cảnh nào? Vì sao?',
-        'Bạn ghét bản thân mình nhất là trong hoàn cảnh nào? Vì sao?',
-        'Bạn có giàu không?',
-        'Nếu bạn giàu, làm bạn thân vs mình nhé?',
-        'Bạn đã mua Chứng Chỉ Quỹ trên MoMo chưa?',
-        'Bạn đã mua Vàng trên MoMo chưa?',
-        'Nếu bạn chưa mua CCQ, bạn hãy đi mua đi được không?',
-        'Nếu bạn chưa mua Vàng, bạn hãy đi mua đi được không?',
-        'Tại sao bạn chưa đi mua Chứng Chỉ Quỹ?',
-        'Tại sao bạn chưa đi mua Vàng?',
-        'Bạn có muốn cuối năm sếp thưởng Chứng Chỉ Quỹ không?',
-        'Bạn có muốn cuối năm sếp thưởng Vàng không?',
-        'Giữa zalopay và momo thì app nào tốt hơn?',
-        'Nếu 1 ngày được đổi vị trí với line manager thì bạn sẽ làm gì?',
-        'Nếu 1 ngày bạn được hẹn hò với anh Duy Nhân thì bạn sẽ làm gì?',
-        'Giữa zalopay và viettel money, bạn muốn làm việc ở đâu hơn?',
-        'Thuế thu nhập cá nhân của bạn là bao nhiêu?',
-        'Nếu không phải làm ở MoMo thì sẽ làm ở đâu?',
-        'Muốn sống đến năm bao nhiêu tuổi?',
-        'Thích ở chung cư hay nhà mặt đất?',
-        'Có thấy bản thân là người tốt không?',
-        'Thích đẻ đứa đầu là con trai hay con gái?',
-        'Công ty mơ ước của bạn là gì? phải nói thật',
-        'Đã tìm được người khiến bạn muốn cưới chưa?',
-        'Đọc Cây cam ngọt của tôi chưa?',
-        'Ai là người bạn tôn trọng nhất MoMo?',
-        'Ai là người giống lãnh đạo tương lai nhất MoMo? (không phải lead/mana hiện tại)',
-        'Điều cần có ở 1 đồng nghiệp tốt?',
-        'Bạn hay cọc với team nào nhất ở MoMo? (team kiểu growth, risk, marketing,...)',
-        'Nếu có quyền quyết định bạn muốn tăng lương cho ai?',
-        'Những lúc stress bạn sẽ đi đâu quanh MoMo?',
-        'Top 5 đồng nghiệp khác giới mà bạn thích nhất trong F&S?',
-        'Thứ gì xuất khẩu được, nhập khẩu thì không?',
-        'Trong bài thơ “tát nước đầu đình”, chàng trai bỏ quên chiếc áo ở đâu?',
-        'Con gì sinh ra đã ồn ào?',
-        'Con gì sinh ra đạo đức đã không tốt?',
-        'cho dung dịch H2SO4 đậm đặc tác dụng với đứa bạn ghét. bạn sẽ dùng bao nhiu lít?',
-        'Bạn sẽ làm gì nếu trúng xổ số?',
-        'Bạn muốn sống ở quốc gia nào nếu có cơ hội?',
-        'Bạn muốn làm gì trong vài năm tới?',
-        'Nếu bạn có thể có một siêu sức mạnh, đó sẽ là gì?',
-        'Bạn muốn làm gì trong kỳ nghỉ tết?',
-        'hồi bé bạn ước lớn lên làm nghề/ công việc gì?',
-        'bạn có mối tình đầu vào năm bao nhiêu tuổi?',
-        'cuối tuần bạn thích làm gì nhất?',
-        'bạn hãy tự chấm điểm nhan sắc của bản thân',
-        'bộ phận nào trên gương mặt làm bạn cảm thấy không hài lòng nhất?',
-        'bạn thích biển hay núi? tại sao?',
-        'Lần cuối cùng bạn khóc?',
-        'Chung cư hay nhà đất, tại sao?',
-        'Nếu được viết 1 quyển sách, bạn sẽ viết về chủ đề gì?',
-        'Bạn thích góc (khu vực) nào nhất trong nhà mình?',
-        'Nếu có 2 tỷ, bạn có trích 1 nửa số tiền đó mua ô tô hay không? (TH cuộc sống đã đầy đủ, không thiếu thốn)',
-        'Nếu bạn có thể đặt mình vào vị trí của ai đó trong 24 giờ, bạn sẽ chọn ai?',
-        'Nếu có thể biến cuộc đời mình thành một bộ phim, bạn sẽ chọn bộ phim nào?',
-        'Nếu bạn có thể làm bất cứ điều gì bạn muốn, công việc mơ ước của bạn sẽ là gì?',
-        'Bạn muốn sống ở quốc gia nào nếu có cơ hội?',
-        'Trong điều kiện nào bạn sẽ nói dối một người bạn?',
-        'Nếu mà nghỉ MoMo thì điều gì làm bạn tiếc nhất?',
-        'Lý do gì còn ngồi ở công ty đến lúc này? sao chưa nghỉ hửm?',
-        'Tóc em màu nâu, môi em màu đỏ. Lại gần hỏi nhỏ, anh có thích em hông?',
-        'Khai thiệt đi, có bao nhiêu mối tình ở công ty rồi?',
-        'Còn đang làm ở MoMo mà có đi phỏng vấn đâu chưa?',
-        'Làm lính hay làm lead?',
-        'Có thực sự happy với công việc hiện tại?',
-        'Sao tự nhiên vô MoMo làm dọ?',
-        'Kỷ niệm nhớ nhất cùng đồng bọn team anh Tuấn?',
-        'Đã từng ko thích và chuyển thành quý 1 người trong team chưa?',
-        'Cuối tuần sẽ thích đi chill ở đâu?',
-        'Thích bình minh hay hoàng hôn?',
-        'Đi du lịch phượt bằng xe máy hay di chuyển bằng phương tiện khác?',
-        'Chuyến đi đầu tiên cùng một người đặc biệt sẽ đi đâu?',
-        'Tâm sự về cuộc đời thì chơi bia hay rượu?',
-        'Quan điểm về "bạn thân khác giới" như nào?',
-        'Một lần cảm thấy cuộc đời không màu hồng?',
-        'Khi chán nản, thường refresh/reboot bản thân bằng cách nào?',
-        'Kể về một lần thất tình trong đời',
-        'Kể về lần đầu tiên biết "rung động"',
-        'Bạn nào có tính cách thú vị nhất khối F&S?',
-        'Bạn nào nói chuyện hài hước nhất khối F&S?',
-        'Nếu chọn 1 người khác giới trông khối FS để yêu bạn sẽ chọn ai?',
-        'Nếu chọn 1 người khác giới trông khối FS để cưới bạn sẽ chọn ai?',
-        'Nếu chọn 1 người khác giới trông khối FS để giết bạn sẽ chọn ai?',
-        'Bạn thích nhất điều gì từ sếp bạn? (Nếu anh Tuấn phải trả lời câu này thì: Sếp Tuấn thích điều gì nhất của các lead?)',
-        'Nếu không đi buổi YEP hôm nay, và bạn bắt buộc phải chọn 1 người trong khối F&S để đi chơi. Đó là ai?',
-        'Nếu không làm Product, bạn sẽ làm gì?',
-        'Ai là người hát hay nhất khối F&S?',
-        'Ai mặc đẹp nhất YEP hôm nay? (chỉ ra 1 nam & 1 nữ)',
-        'Ngoài việc tăng lương, lên chức, trong năm 2023 bạn muốn đạt được điều gi nhất?',
-        'Giả sử mai bạn phải ra đảo sống và chỉ được đem theo 1 món đồ, đó là gì?',
-        'Bạn nữ nào điệu nhất khối F&S?',
-        'Nếu bạn có thể so sánh bản thân với bất kỳ con vật nào, thì nó là gì và tại sao?',
-        'Chọn 1 trong 2: Bia hay rượu?',
-        'Feature nào bạn tự hào nhất trong năm 2022? ',
-        'Hãy chia sẻ 1 bí mật của bạn mà mọi người trong team chưa biết?',
-        'Nếu không làm PO thì bạn sẽ làm gì?',
-    ];
+    var rawQuiz = [];
     var randomData = [];
     let list = document.getElementById("randomQuiz");
 
@@ -267,21 +147,18 @@
 
     function randomQuiz() {
         arrLength = rawQuiz.length;
-        if (arrLength !== 0) {
-            randOrder = Math.floor(Math.random() * (arrLength));;
-            list.innerHTML = rawQuiz[randOrder];
-            anime.timeline({ loop: false })
-                .add({
-                    targets: '.ml4 .letters-1',
-                    opacity: ml4.opacityIn,
-                    scale: ml4.scaleIn,
-                    duration: ml4.durationIn
-                });
-            randomData.push(rawQuiz[randOrder]);
-            rawQuiz.splice(randOrder, 1);
-        } else {
-            list.innerHTML = "rawQuiz blank";
-        }
+        randOrder = Math.floor(Math.random() * (arrLength));;
+        list.innerHTML = "Hết rồi";
+        anime.timeline({ loop: false })
+            .add({
+                targets: '.ml4 .letters-1',
+                opacity: ml4.opacityIn,
+                scale: ml4.scaleIn,
+                duration: ml4.durationIn
+            });
+        randomData.push(rawQuiz[randOrder]);
+        rawQuiz.splice(randOrder, 1);
+
     }
 </script>
 
