--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <meta charset="utf-8">
+<title>F&S YEP 2022</title>
+<link rel="icon" type="image/x-icon" href="https://static.mservice.io/styles/desktop/images/svg/check.svg">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
